--- a/trunk/backport175/build.xml
+++ b/trunk/backport175/build.xml
@@ -163,8 +163,8 @@
     <!-- jjtree and javacc compilation -->
     <!-- ============================================================== -->
     <target name="jjtree" depends="init">
-        <jjtree target="${src.dir}/main/org/codehaus/${name}/expression/ast/grammar.jjt" outputdirectory="${src.dir}/main/org/codehaus/${name}/expression/ast" javacchome="${env.JAVACC_HOME}"/>
-        <javacc target="${src.dir}/main/org/codehaus/${name}/expression/ast/grammar.jj" outputdirectory="${src.dir}/main/org/codehaus/${name}/expression/ast" javacchome="${env.JAVACC_HOME}"/>
+        <jjtree target="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast/grammar.jjt" outputdirectory="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast" javacchome="${env.JAVACC_HOME}"/>
+        <javacc target="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast/grammar.jj" outputdirectory="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast" javacchome="${env.JAVACC_HOME}"/>
     </target>
     <!-- ============================================================== -->
     <!-- javadoc -->
