--- a/trunk/eclipse/org.codehaus.backport175.ide.eclipse.core/build.properties
+++ b/trunk/eclipse/org.codehaus.backport175.ide.eclipse.core/build.properties
@@ -4,6 +4,8 @@ bin.includes = plugin.xml,\
                icons/,\
                backport175-eclipse.jar,\
                lib/*.jar,\
-               LICENSE.txt
+               LICENSE.txt,\
+               lib/backport175-1.0.jar
 jars.compile.order = backport175-eclipse.jar
-jars.extra.classpath = lib/backport175-1.0.RC1.jar
+jars.extra.classpath = lib/backport175-1.0.jar
+bin.excludes = icons/CVS/
