--- a/eclipse/org.codehaus.backport175.ide.eclipse.core/plugin.xml
+++ b/eclipse/org.codehaus.backport175.ide.eclipse.core/plugin.xml
@@ -121,7 +121,7 @@
             type="org.eclipse.core.resources.textmarker">
       </super>
       <persistent
-            value="false">
+            value="true">
       </persistent>
    </extension>
    <extension
@@ -132,7 +132,7 @@
             type="org.eclipse.core.resources.problemmarker">
       </super>
       <persistent
-            value="false">
+            value="true">
       </persistent>
    </extension>
    <extension
