--- a/trunk/backport175/build.xml
+++ b/trunk/backport175/build.xml
@@ -176,7 +176,7 @@
     <!-- ============================================================== -->
     <target name="jjtree" depends="init">
         <jjtree target="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast/grammar.jjt" outputdirectory="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast" javacchome="${env.JAVACC_HOME}"/>
-        <javacc target="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast/grammar.jj" outputdirectory="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast" javacchome="${env.JAVACC_HOME}"/>
+        <javacc target="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast/grammar.jj" outputdirectory="${src.dir}/main/org/codehaus/${name}/compiler/parser/ast" javacchome="${env.JAVACC_HOME}" unicodeinput="true"/>
     </target>
     <!-- ============================================================== -->
     <!-- javadoc -->
