--- a/backport175/build.xml
+++ b/backport175/build.xml
@@ -31,7 +31,7 @@
     <!-- =================================================== -->
     <target name="init">
         <property name="name" value="backport175"/>
-        <property name="version" value="1.0"/>
+        <property name="version" value="1.1.RC1-snapshot"/>
         <property name="basedir" value="."/>
         <property name="src.dir" value="${basedir}/src"/>
         <property name="test.reader.src.dir" value="${basedir}/src/test/reader"/>
